fixed ph alignment

--- a/public/landingpage/styles/style.css
+++ b/public/landingpage/styles/style.css
@@ -109,7 +109,7 @@ body {
   color: white;
   font: inherit;
   font-size: 20px;
-  padding: 16px 24px;
+  padding: 15px 24px;
   margin: 0 8px;
   border-radius: 10px;
   border: none;
